--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -86,16 +86,26 @@ const path = Astro.url.pathname.replace(/^\//, "").replace(/\.html$/, "");
 			crossorigin="anonymous"></script>
 		<ClientRouter />
 	</head>
-	<body
-		class={css`
-			background-image: radial-gradient(#ffffff, #bebebe);
-			overflow: hidden;
+	<body>
+		<div
+			id="background"
+			class={css`
+				position: fixed;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				z-index: -1;
 
-			@media (prefers-color-scheme: dark) {
-				background-image: radial-gradient(#555, #000);
-			}
-		`}
-	>
+				background-image: radial-gradient(#ffffff, #bebebe);
+				overflow: hidden;
+
+				@media (prefers-color-scheme: dark) {
+					background-image: radial-gradient(#555, #000);
+				}
+			`}
+		>
+		</div>
 		<!-- Google Tag Manager (noscript) -->
 		<noscript>
 			<iframe
