--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -94,7 +94,7 @@ const path = Astro.url.pathname.replace(/^\//, "").replace(/\.html$/, "");
 				top: 0;
 				left: 0;
 				width: 100%;
-				height: 100%;
+				height: 100vh;
 				z-index: -1;
 
 				background-image: radial-gradient(#ffffff, #bebebe);
