--- a/src/layouts/PostList.astro
+++ b/src/layouts/PostList.astro
@@ -25,6 +25,7 @@ const { posts } = Astro.props;
 			border: 4px solid #ffffff;
 			user-select: none;
 			pointer-events: none;
+			z-index: 2;
 
 			@media (max-width: 800px) {
 				opacity: 0.5;
@@ -191,233 +192,227 @@ const { posts } = Astro.props;
 
 	<div
 		class={css`
-			overflow-y: scroll;
 			position: fixed;
-			bottom: 0;
+			top: 0;
 			left: 0;
 			width: 100%;
-			height: 100%;
-			mask-image: linear-gradient(to bottom, transparent 0px, black 200px, black 100%);
+			height: 100vh;
+			z-index: 1;
+			user-select: none;
+			pointer-events: none;
+			background-image: radial-gradient(#ffffff, #bebebe);
+			overflow: hidden;
+			mask-image: linear-gradient(to bottom, black 0px, transparent 200px, transparent 100%);
 
-			@media (max-width: 800px) {
-				mask-image: linear-gradient(to bottom, transparent 0px, black 100px, black 100%);
+			@media (prefers-color-scheme: dark) {
+				background-image: radial-gradient(#555, #000);
+				mask-image: linear-gradient(to bottom, black 0px, transparent 100px, transparent 100%);
 			}
+		`}
+	>
+	</div>
 
-			-ms-overflow-style: none;
-			scrollbar-width: none;
-			&::-webkit-scrollbar {
-				display: none;
-			}
+	<div
+		class={css`
+			padding: 50vh 20px 10vh;
 		`}
 	>
 		<div
 			class={css`
-				padding: 50vh 20px 10vh;
+				display: flex;
+				flex-direction: column;
+				align-items: flex-start;
+				gap: 15px;
 			`}
 		>
-			<div
-				class={css`
-					display: flex;
-					flex-direction: column;
-					align-items: flex-start;
-					gap: 15px;
-				`}
-			>
-				{
-					posts.map((post) => {
-						const formattedPublishedAt = formatDate(post.publishedAt ?? post.createdAt);
+			{
+				posts.map((post) => {
+					const formattedPublishedAt = formatDate(post.publishedAt ?? post.createdAt);
 
-						return (
-							<div
-								class={cx(
-									css`
-										position: relative;
-										transition-duration: 200ms;
-										border: 2px solid transparent;
-										padding-left: 15px;
-									`,
-									"post-card"
-								)}
-								data-id={post.id}
-								data-tags={JSON.stringify(post.tags.map((tag) => tag.id))}
-							>
-								<a href={`/posts/${post.id}`} aria-label={`記事『${post.title}』を読む`}>
-									<h2
-										data-emoji={getEmojiOfWeek(formattedPublishedAt.day)}
-										class={cx(
-											css`
-												position: relative;
-												font-size: 18px;
-												font-weight: bold;
+					return (
+						<div
+							class={cx(
+								css`
+									position: relative;
+									transition-duration: 200ms;
+									border: 2px solid transparent;
+									padding-left: 15px;
+								`,
+								"post-card"
+							)}
+							data-id={post.id}
+							data-tags={JSON.stringify(post.tags.map((tag) => tag.id))}
+						>
+							<a href={`/posts/${post.id}`} aria-label={`記事『${post.title}』を読む`}>
+								<h2
+									data-emoji={getEmojiOfWeek(formattedPublishedAt.day)}
+									class={cx(
+										css`
+											position: relative;
+											font-size: 18px;
+											font-weight: bold;
+											padding: 3px 0;
+											margin-bottom: 3px;
+											color: #464646;
+
+											@media (prefers-color-scheme: dark) {
+												color: white;
+											}
+
+											&:hover {
+												@media (hover: hover) {
+													background-color: #edf8af;
+													color: #353d06;
+
+													&:before {
+														animation-name: signal;
+													}
+
+													&:after {
+														animation-name: signal;
+													}
+												}
+											}
+
+											&:before {
+												position: absolute;
+												top: 0;
+												left: -30px;
+												content: attr(data-emoji);
 												padding: 3px 0;
-												margin-bottom: 3px;
-												color: #464646;
+												color: #818181;
+												filter: brightness(110%) blur(3px);
+												animation-duration: 50ms;
+												animation-fill-mode: forwards;
+												animation-iteration-count: 3;
+												animation-timing-function: linear;
+											}
 
-												@media (prefers-color-scheme: dark) {
-													color: white;
-												}
-
-												&:hover {
-													@media (hover: hover) {
-														background-color: #edf8af;
-														color: #353d06;
-
-														&:before {
-															animation-name: signal;
-														}
-
-														&:after {
-															animation-name: signal;
-														}
-													}
-												}
-
-												&:before {
-													position: absolute;
-													top: 0;
-													left: -30px;
-													content: attr(data-emoji);
-													padding: 3px 0;
-													color: #818181;
-													filter: brightness(110%) blur(3px);
-													animation-duration: 50ms;
-													animation-fill-mode: forwards;
-													animation-iteration-count: 3;
-													animation-timing-function: linear;
-												}
-
-												&:after {
-													position: absolute;
-													top: 0;
-													left: -30px;
-													content: attr(data-emoji);
-													padding: 3px 0;
-													color: #818181;
-													animation-duration: 50ms;
-													animation-fill-mode: forwards;
-													animation-iteration-count: 5;
-													animation-timing-function: linear;
-												}
-											`,
-											"post-title"
-										)}
-										transition:name={`${post.id}-title`}
-									>
-										{post.title}
-									</h2>
-								</a>
-								{post.tags.length !== 0 && (
-									<div
-										class={css`
-											display: flex;
-											gap: 7px;
-											flex-wrap: wrap;
-											align-items: center;
-											margin-bottom: 8px;
-										`}
-									>
-										{post.tags.map((tag) => {
-											const size = 20;
-
-											return (
-												<img
-													data-tag-id={tag.id}
-													class={cx(
-														"post-tag-icon",
-														css`
-															background-color: #eeeeee;
-															border-radius: 9999px;
-															animation-duration: 1s;
-															animation-iteration-count: infinite;
-															animation-timing-function: steps(10);
-
-															&:hover {
-																animation-name: tagRotate;
-															}
-														`
-													)}
-													src={
-														tag.image !== undefined
-															? `${tag.image.url}?fm=webp&w=${50}`
-															: ""
-													}
-													width={size}
-													height={size}
-													alt={tag.name}
-													loading="lazy"
-												/>
-											);
-										})}
-									</div>
-								)}
-								<time
-									class={css`
-										font-size: 13px;
-										display: block;
-
-										&:before {
-											content: "# ";
-											color: #818181;
-										}
-									`}
-									datetime={post.publishedAt ?? post.createdAt}
+											&:after {
+												position: absolute;
+												top: 0;
+												left: -30px;
+												content: attr(data-emoji);
+												padding: 3px 0;
+												color: #818181;
+												animation-duration: 50ms;
+												animation-fill-mode: forwards;
+												animation-iteration-count: 5;
+												animation-timing-function: linear;
+											}
+										`,
+										"post-title"
+									)}
+									transition:name={`${post.id}-title`}
 								>
-									{`${formattedPublishedAt.year}/${formattedPublishedAt.month}/${formattedPublishedAt.date}`}
-								</time>
+									{post.title}
+								</h2>
+							</a>
+							{post.tags.length !== 0 && (
 								<div
 									class={css`
 										display: flex;
+										gap: 7px;
+										flex-wrap: wrap;
 										align-items: center;
-										margin-top: 6px;
+										margin-bottom: 8px;
 									`}
 								>
-									{post.category !== undefined && (
-										<a
-											href={`/categories/${post.category.id}`}
-											class={css`
-												--_foreground-threshold: 0.7;
-												--_foreground: oklch(
-													from var(--_background)
-														round(up, var(--_foreground-threshold) / l - 1, 1) 0 h
-												);
+									{post.tags.map((tag) => {
+										const size = 20;
 
-												display: block;
-												border-style: solid;
-												border-color: transparent;
-												border-width: 1px;
+										return (
+											<img
+												data-tag-id={tag.id}
+												class={cx(
+													"post-tag-icon",
+													css`
+														background-color: #eeeeee;
+														border-radius: 9999px;
+														animation-duration: 1s;
+														animation-iteration-count: infinite;
+														animation-timing-function: steps(10);
 
-												font-size: 12px;
-												position: relative;
-												z-index: 1;
+														&:hover {
+															animation-name: tagRotate;
+														}
+													`
+												)}
+												src={tag.image !== undefined ? `${tag.image.url}?fm=webp&w=${50}` : ""}
+												width={size}
+												height={size}
+												alt={tag.name}
+												loading="lazy"
+											/>
+										);
+									})}
+								</div>
+							)}
+							<time
+								class={css`
+									font-size: 13px;
+									display: block;
 
-												&:hover {
-													color: var(--_foreground);
-													background-color: var(--_background);
+									&:before {
+										content: "# ";
+										color: #818181;
+									}
+								`}
+								datetime={post.publishedAt ?? post.createdAt}
+							>
+								{`${formattedPublishedAt.year}/${formattedPublishedAt.month}/${formattedPublishedAt.date}`}
+							</time>
+							<div
+								class={css`
+									display: flex;
+									align-items: center;
+									margin-top: 6px;
+								`}
+							>
+								{post.category !== undefined && (
+									<a
+										href={`/categories/${post.category.id}`}
+										class={css`
+											--_foreground-threshold: 0.7;
+											--_foreground: oklch(
+												from var(--_background)
+													round(up, var(--_foreground-threshold) / l - 1, 1) 0 h
+											);
 
-													&:before {
-														color: var(--_foreground);
-													}
-												}
+											display: block;
+											border-style: solid;
+											border-color: transparent;
+											border-width: 1px;
+
+											font-size: 12px;
+
+											&:hover {
+												color: var(--_foreground);
+												background-color: var(--_background);
 
 												&:before {
-													content: "# ";
-													color: var(--_background);
+													color: var(--_foreground);
 												}
-											`}
-											style={{ "--_background": post.category.color }}
-										>
-											{post.category.name}
-										</a>
-									)}
-								</div>
-							</div>
-						);
-					})
-				}
-			</div>
+											}
 
-			<Footer />
+											&:before {
+												content: "# ";
+												color: var(--_background);
+											}
+										`}
+										style={{ "--_background": post.category.color }}
+									>
+										{post.category.name}
+									</a>
+								)}
+							</div>
+						</div>
+					);
+				})
+			}
 		</div>
+
+		<Footer />
 	</div>
 </Base>
 
@@ -451,6 +446,15 @@ const { posts } = Astro.props;
 </style>
 
 <style lang="scss" is:global>
+	body,
+	html {
+		-ms-overflow-style: none;
+		scrollbar-width: none;
+		&::-webkit-scrollbar {
+			display: none;
+		}
+	}
+
 	.flow-tag-wrapper {
 		position: absolute;
 		bottom: 0;
