サイトURLを新しいドメインに変更

--- a/src/components/molecules/Footer.astro
+++ b/src/components/molecules/Footer.astro
@@ -24,7 +24,7 @@ import { css } from "@/styled-system/css";
 	>
 		Created by
 		<a
-			href="https://aki.wtf"
+			href="https://shikiiro.net"
 			target="_blank"
 			class={css`
 				font-weight: bold;
