--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -74,7 +74,7 @@ const path = Astro.url.pathname.replace(/^\//, "").replace(/\.html$/, "");
 				author: {
 					"@type": "Person",
 					name: "彩季",
-					url: "https://aki.wtf"
+					url: "https://shikiiro.net"
 				}
 			})}
 		/>
