--- a/src/pages/posts/[id]/index.astro
+++ b/src/pages/posts/[id]/index.astro
@@ -82,7 +82,7 @@ const formattedUpdatedAt = formatDate(blog.updatedAt ?? blog.createdAt);
 					author: {
 						"@type": "Person",
 						name: "彩季",
-						url: "https://aki.wtf"
+						url: "https://shikiiro.net"
 					}
 				})}
 			/>
