Postコンポーネントに太字スタイルを追加

--- a/src/components/molecules/Post.astro
+++ b/src/components/molecules/Post.astro
@@ -308,6 +308,11 @@ const formattedPublishedAt = formatDate(post.publishedAt ?? post.createdAt);
 				text-decoration: line-through;
 			}
 
+			strong,
+			strong > * {
+				font-weight: bold;
+			}
+
 			p > code {
 				background-color: #242424;
 				color: white;
